@@ -1,2 +1,2 @@
-#define VERSION "2.11.03"
-#define YEARS   "2005-2013"
+#define VERSION "2.11.04"
+#define YEARS   "2005-2014"
