@@ -33,7 +33,7 @@ Scanner::Scanner(ConfigSorter &sorter, Reporter &reporter)
     d_maxSize(10 * 1024 * 1024),
     d_maxSizeStr("10M"),
     d_quit(false),
-    d_diffPrefix(A2x(d_sorter["DIFFPREFIX"])),
+    d_diffPrefix(stoul(d_sorter["DIFFPREFIX"])),
     d_pathOffset(numeric_limits<size_t>::max())
 {
     setSentinel();
